Bug#32670 - make sure transaction off is captured